# Anvil

./: .gitignore  .gitmodules  CMakeLists.txt  DESIGN.md  PROJECT_SPEC.md  README.md
anvil/src/: anvil.cpp
include/anvil/: config.h  engine.h  hardware.h  types.h
scripts/: benchmark.sh
src/: config.cpp  engine.cpp  hardware.cpp  main.cpp
